force-app/main/default/objects/Audit__c/fields/Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>Audit_Status__c</fullName>
    <label>Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Auditing</fullName>
            </value>
            <value>
                <fullName>Awaiting Corrections</fullName>
            </value>
            <value>
                <fullName>Corrections Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>