force-app/main/default/objects/Audit__c/fields/Corrected_Date__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corrected Date</label>
    <type>Date</type>
</CustomField>