force-app/main/default/objects/Audit__c/fields/Corrected_Detail__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corrected Detail</label>
    <type>TextArea</type>
</CustomField>