force-app/main/default/objects/Audit__c/fields/Date_of_Error__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Error</label>
    <type>Date</type>
</CustomField>