force-app/main/default/objects/Audit__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>