force-app/main/default/objects/Audit__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Description</label>
    <type>TextArea</type>
</CustomField>