force-app/main/default/objects/Audit__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Documentation</fullName>
            </value>
            <value>
                <fullName>Missing Signatures</fullName>
            </value>
            <value>
                <fullName>Regulations</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>