force-app/main/default/objects/Audit__c/fields/Flow_Validation_Rule_Bypass_Check__c.field-meta.xml
<CustomField>
    <fullName>Flow_Validation_Rule_Bypass_Check__c</fullName>
    <description>Used by Flow and Email alert to bypass validation rules for automated processing.</description>
    <formula>NOW() - 0.00005787037 &gt; Flow_Validation_Rule_Bypass_Timestamp__c</formula>
    <label>Flow Validation Rule Bypass Check</label>
    <type>Checkbox</type>
</CustomField>