force-app/main/default/objects/Audit__c/fields/Flow_Validation_Rule_Bypass_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Flow_Validation_Rule_Bypass_Timestamp__c</fullName>
    <description>Used by Flow and Email alert to keep PCR User Email current after lookup is edited.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow Validation Rule Bypass Timestamp</label>
    <type>DateTime</type>
</CustomField>