force-app/main/default/objects/Audit__c/fields/No_Errors_Found__c.field-meta.xml
<CustomField>
    <fullName>No_Errors_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Errors Found</label>
    <type>Checkbox</type>
</CustomField>