force-app/main/default/objects/Audit__c/fields/Personal_Banker_CSR_Email__c.field-meta.xml
<CustomField>
    <fullName>Personal_Banker_CSR_Email__c</fullName>
    <description>Used by Audit Flow and Email alert to notify Personal Banker/CSR User.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Personal Banker/CSR Email</label>
    <type>Email</type>
</CustomField>