force-app/main/default/objects/Audit__c/fields/Personal_Banker_CSR_Name__c.field-meta.xml
<CustomField>
    <fullName>Personal_Banker_CSR_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User.</description>
    <inlineHelpText>Lookup to User.</inlineHelpText>
    <label>Personal Banker/CSR Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>