force-app/main/default/objects/Audit__c/fields/Running_User_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Running_User_is_Owner__c</fullName>
    <formula>$User.Id =  Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User is Owner</label>
    <type>Checkbox</type>
</CustomField>