force-app/main/default/objects/Audit__c/fields/Running_User_is_Personal_Banker_CSR__c.field-meta.xml
<CustomField>
    <fullName>Running_User_is_Personal_Banker_CSR__c</fullName>
    <description>Determines if Running user is Personal Banker/CSR. For use with List view.</description>
    <formula>Personal_Banker_CSR_Name__c == $User.Id</formula>
    <label>Running User is Personal Banker/CSR</label>
    <type>Checkbox</type>
</CustomField>