force-app/main/default/objects/Audit__c/validationRules/Corrected_Details_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Corrected_Details_Needed</fullName>
    <active>true</active>
    <description>If Corrected Date field is populated Correction Details cannot be blank.</description>
    <errorConditionFormula>No_Errors_Found__c == FALSE
&amp;&amp;
Flow_Validation_Rule_Bypass_Check__c = FALSE
&amp;&amp;
AND( 
   ISBLANK( Corrected_Detail__c ) , 
   NOT( ISBLANK( Corrected_Date__c ) ) 
)</errorConditionFormula>
    <errorDisplayField>Corrected_Detail__c</errorDisplayField>
    <errorMessage>You have filled out the corrected date, please also provide the corrected details before saving the record.</errorMessage>
</ValidationRule>