force-app/main/default/objects/Audit__c/validationRules/PBCSR_Name_Required_if_Error_Type_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>PBCSR_Name_Required_if_Error_Type_Blank</fullName>
    <active>true</active>
    <description>If an error type is selected and the &quot;Personal Banker/CSR Name&quot; field is blank, user is prompted to populate a user in the &quot;Personal Banker/CSR Name&quot; field before saving the record.</description>
    <errorConditionFormula>Flow_Validation_Rule_Bypass_Check__c = FALSE
&amp;&amp;
AND(
ISBLANK( Personal_Banker_CSR_Name__c) ,
NOT ( ISBLANK( Error_Type__c ) )
)</errorConditionFormula>
    <errorDisplayField>Personal_Banker_CSR_Name__c</errorDisplayField>
    <errorMessage>You have selected an Error Type. Please also select a Personal Banker/CSR Name.</errorMessage>
</ValidationRule>