force-app/main/default/objects/Audit__c/validationRules/PBCSR_Name_Required_if_No_Errors_Found.validationRule-meta.xml
<ValidationRule>
    <fullName>PBCSR_Name_Required_if_No_Errors_Found</fullName>
    <active>true</active>
    <description>If an error type is selected or check the &quot;No Errors Found&quot; checkbox and the &quot;Personal Banker/CSR Name&quot; field is blank, user is prompted to populate a user in the &quot;Personal Banker/CSR Name&quot; field before saving the record.</description>
    <errorConditionFormula>Flow_Validation_Rule_Bypass_Check__c = FALSE
&amp;&amp;
AND(
ISBLANK( Personal_Banker_CSR_Name__c) ,
No_Errors_Found__c = TRUE
)</errorConditionFormula>
    <errorDisplayField>Personal_Banker_CSR_Name__c</errorDisplayField>
    <errorMessage>You have selected &quot;No Errors Found&quot;. Please also select a Personal Banker/CSR Name.</errorMessage>
</ValidationRule>