force-app/main/default/objects/Audit__c/validationRules/Status_Closed_Not_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Closed_Not_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Audit_Status__c) = &quot;Closed&quot;
&amp;&amp;
 ISBLANK(Corrected_Date__c )
&amp;&amp;
 No_Errors_Found__c = False</errorConditionFormula>
    <errorDisplayField>Audit_Status__c</errorDisplayField>
    <errorMessage>Please enter a corrected date or indicate no errors where found.</errorMessage>
</ValidationRule>