force-app/main/default/objects/Audit__c/listViews/Audits_Audit.listView-meta.xml
<ListView>
    <fullName>Audits_Audit</fullName>
    <columns>NAME</columns>
    <columns>Financial_Account__c</columns>
    <columns>Personal_Banker_CSR_Name__c</columns>
    <columns>Audit_Status__c</columns>
    <columns>Date_Opened__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Queue</filterScope>
    <label>Audits</label>
    <queue>Audits</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>