force-app/main/default/objects/Audit__c/listViews/Audits_Audit2.listView-meta.xml
<ListView>
    <fullName>Audits_Audit2</fullName>
    <filterScope>Queue</filterScope>
    <label>Audits</label>
    <queue>Audits</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>