force-app/main/default/objects/Audit__c/listViews/My_Audits_Corrections_Completed.listView-meta.xml
<ListView>
    <fullName>My_Audits_Corrections_Completed</fullName>
    <columns>Audit_Status__c</columns>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Date_Opened__c</columns>
    <columns>Error_Description__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Date_of_Error__c</columns>
    <columns>Corrected_Date__c</columns>
    <columns>Corrected_Detail__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Audit_Status__c</field>
        <operation>equals</operation>
        <value>Corrections Completed</value>
    </filters>
    <label>My Audits - Corrections Completed</label>
</ListView>